# moth_packer

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  cliff.toml  conanfile.py
.github/workflows/: build-test.yml  upload-release.yml
conan/profiles/: linux_profile
include/moth_packer/: packer.h  version.h.in
src/: main.cpp  packer.cpp  packer.h  stb_impl.c
tests/: CMakeLists.txt  conanfile.py
tests/src/: test_collect.cpp  test_helpers.h  test_packer.cpp
